nodered/nodered.deployment.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: nodered
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nodered
    spec:
      containers:
        - name: nodered
          image: nodered/node-red
          imagePullPolicy: Always
          ports:
            - containerPort: 1880
              name: nodered
          volumeMounts:
            - name: nodered-config
              mountPath: /data
            - name: localtime
              mountPath: /etc/localtime
      volumes:
        - name: nodered-config
          nfs:
            server: 192.168.1.128
            path: /volume1/configs/homeassistant/nodered
        - name: localtime
          hostPath:
            path: /etc/localtime
