nodered/nodered.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nodered
  labels:
    app: nodered
spec:
  selector:
    app: nodered
  ports:
    - name: nodered
      port: 80
      targetPort: 1880
