nodered/nodered.ingress.traefik.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: nodered
  labels:
    app: nodered
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: nodered.home
      http:
        paths:
          - backend:
              serviceName: nodered
              servicePort: 80
